--- a/index.ipynb
+++ b/index.ipynb
@@ -12,7 +12,7 @@
    "metadata": {},
    "source": [
     "## Introduction\n",
-    "This lesson summarizes the topics we'll be covering in section 07 and why they'll be important to you as a data scientist."
+    "This lesson summarizes the topics we'll be covering in section 07 and why they'll be important to you as a data scientist. "
    ]
   },
   {
@@ -66,9 +66,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "learn-env",
    "language": "python",
-   "name": "python3"
+   "name": "learn-env"
   },
   "language_info": {
    "codemirror_mode": {
@@ -80,7 +80,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
